@@ -2,14 +2,14 @@
 Hash: SHA1
 
 DIST xfdesktop-4.5.92.tar.bz2 3098257 RMD160 44dc97f747bb1d986b63c3d66b19fc49047ba567 SHA1 733617ac126669526cc7c89534203d34c17ee745 SHA256 3802a71048fb24ee688bdbbedcc1c96b05ce57b737a6a442ae31c1805e18e91a
-EBUILD xfdesktop-4.5.92.ebuild 1801 RMD160 355c7078ba5c7ddd471bc1045ef4360942e34057 SHA1 cf6a24e156aeec636f37c1a73356403ba5958f32 SHA256 4bc156144639c01d8ccb13acdf2712041aa486d1df684517382d7c3667934228
-EBUILD xfdesktop-9999.ebuild 1801 RMD160 355c7078ba5c7ddd471bc1045ef4360942e34057 SHA1 cf6a24e156aeec636f37c1a73356403ba5958f32 SHA256 4bc156144639c01d8ccb13acdf2712041aa486d1df684517382d7c3667934228
-MISC ChangeLog 1700 RMD160 e166cef12feb0859095ec68cc1bb4c33f95cae4f SHA1 3836e02608846777074c7b5363f22c2d04fe6aa5 SHA256 f08f3b49f375110d489243ffdf0f348c3e76fe5ef04409697c655190265ec519
+EBUILD xfdesktop-4.5.92.ebuild 1828 RMD160 3fb0419cc2c20e9bfa81fae865f017a13a608c1b SHA1 8a704fd63c9f474f38d76a3b25b82e600f5cfc7e SHA256 b45d961ab834b2716409ad953f66f87b1965fc088a2a75e6dc90868892f61473
+EBUILD xfdesktop-9999.ebuild 1828 RMD160 3fb0419cc2c20e9bfa81fae865f017a13a608c1b SHA1 8a704fd63c9f474f38d76a3b25b82e600f5cfc7e SHA256 b45d961ab834b2716409ad953f66f87b1965fc088a2a75e6dc90868892f61473
+MISC ChangeLog 1842 RMD160 dab0ab98772d79522ddf1775634ff1af1d92bf11 SHA1 44db20c4fac9231f11e8d9579bb48bc7ae5d7487 SHA256 c22fd53f4bbcabf9972379ed231b57c3d804bfa339586482b2e3d5a90a9bceec
 MISC metadata.xml 351 RMD160 4401cf2e2c9cc9f166bdff78a1e15612e784ad1d SHA1 dc6b0946171dda265a9b13871899a9a8e071f6db SHA256 f2a98defe794e66d32ba0f9041a7b0afb7209345974f114ee2b8454dbe4bc6e9
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.9 (GNU/Linux)
 
-iEYEARECAAYFAklAGAEACgkQKhnDs22gwa/aLACg1KR+FbuzXvL3h1eaok5nX7j2
-EEMAn0RlAjw3xvkp+B75sYVZCdBaZC9l
-=o9QO
+iEYEARECAAYFAklG2YQACgkQKhnDs22gwa8+CQCg8k57YJfF4iLOFfKaYMxdv63R
+QOQAoIKUirFop8wd0P8R7on0Kri2CFSy
+=kRS4
 -----END PGP SIGNATURE-----
